# Pinata

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_template.py  streamlit_app.py
src/dummio/: __init__.py
src/dummio/devices/: __init__.py
src/dummio/devices/presets/: __init__.py  hvac.py  motor.py
src/dummio/models/: reading.py
src/dummio/protocols/: mqtt.py
src/pinata/: __init__.py  server.py
src/pinata/devices/: __init__.py  base.py
src/pinata/devices/presets/: __init__.py  hvac.py  motor.py  turbine.py
src/pinata/models/: __init__.py  event.py
src/pinata/protocols/: __init__.py  mqtt.py
tests/: test_api.py  test_device_simulation.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
